syntax = "proto3";

package protocol.mmo;

enum E_PacketID
{
	ENTER_GAME_REQ = 0;
	ENTER_GAME_RESP = 1;
	PLAYER_ENTER_NOTIFY = 2;
	PLAYER_EXIT_NOTIFY = 3;
}
enum E_RespCode
{
	OK = 0;
	NO = 1;
}
enum E_ObjectState
{
	NONE = 0;
	IDLE = 1;
}
enum E_Dir
{
	BOTTOM = 0;
	LEFT = 1;
	UP = 2;
	RIGHT = 3;
	MAX = 4;
}