syntax = "proto3";

package protocol.mmo;
import "MMO_enum.proto";

// not used for packet ( used for data struct )
message TransformInt
{
	int32 x = 1;
	int32 y = 2;
	E_Dir dir = 3;
}
message ObjectInfo
{
	int32 id = 1;
	E_ObjectState state = 2;
	TransformInt transform = 3;
}